# openAAS_PropertyDemo

./: .gitmodules  CMakeLists.txt  Makefile  README.md  assetadministrationshell.xml  dht22.c  openaas_sensortype.xml  openaas_sensortype_instance.xml  openaas_temperaturesensor.xml  openaas_temperaturesensor_instance.xml  propertymodel.xml
